Fetch watch data to display them

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -13,3 +13,14 @@ aside {
   padding: 2vh;
   width: 20vw;
 }
+
+#content {
+  padding: 2vh;
+  width: 80vw;
+
+}
+
+#root{
+  display: flex;
+  justify-content: center;
+}
