--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -5,13 +5,21 @@ body {
 nav {
   border-bottom: 1px solid lightgray;
   padding: 2vh;
-  
+  height: 10vh;
+  position: fixed;
+  width: 100vw;
+  z-index: 5;
+  background-color: white;
 }
 
 aside {
   border-right: 1px solid lightgray;
   padding: 2vh;
   width: 20vw;
+  position: fixed;
+  top: 10vh;
+  bottom: 0;
+  overflow-y: scroll;
 }
 
 #content {
@@ -22,12 +30,17 @@ aside {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  position: absolute;
+  top: 10vh;
+  right: 0;
+  overflow-y:hidden;
+  z-index: 3;
 }
 
-#root{
+/* #root{
   display: flex;
   justify-content: center;
-}
+} */
 .card{
   width: 20vw;
   margin: 2vw;
